# -OHG_AD-Oriented-Half-Gaussian-Kernels-and-Anisotropic-Diffusion-Implementation

./: .gitignore  README.md  pyproject.toml
codes/: __init__.py
codes/algorithms/: ohg_ad.py
codes/core/: diffusion.py  kernels.py  metrics.py  operators.py  orientation.py  params.py
codes/runners/: single.py  sweep.py
codes/viz/: plot_3d_points.py  plot_3d_surface.py  plot_curves.py  plot_heatmap.py
configs/sweeps/: barbara_sigma20.yaml  barbara_sigma20_refine.yaml  man_sigma10.yaml  man_sigma10_refine.yaml
data/USC_SIPI/: man.tiff
ohg_ad/: __init__.py
ohg_ad/algorithms/: ohgad_new.py
ohg_ad/core/: diffusion.py  kernels.py  metrics.py  operators.py  orientation.py
ohg_ad/runners/: single.py  sweep.py
ohg_ad/viz/: plot_curves.py  plot_heatmap.py
results/barbara_sigma20_run/: metrics.jsonl  report.json
results/man_sigma10_autoiters/: best.json
results/man_sigma10_autoiters/iters_01/: metrics.jsonl  report.json
results/man_sigma10_autoiters/iters_02/: metrics.jsonl  report.json
results/man_sigma10_autoiters/iters_03/: metrics.jsonl  report.json
results/man_sigma10_autoiters/iters_04/: metrics.jsonl  report.json
results/man_sigma10_autoiters/iters_05/: metrics.jsonl  report.json
results/man_sigma10_autoiters/iters_06/: metrics.jsonl  report.json
results/man_sigma10_autoiters/iters_07/: metrics.jsonl  report.json
results/man_sigma10_autoiters/iters_08/: metrics.jsonl  report.json
results/man_sigma10_run/: metrics.jsonl  report.json
scripts/: aggregate_results.py  make_plots.py  run_single.py  run_sweep.py
(+12 files in other folders)
